# knot

./: .env.example  .gitignore  README.md  api.py  core.py  librarian.py  main.py  models.py  prompts.py  pyproject.toml  requirements.txt
Inbox/: dist_sys_lec_04.md
Vault/: Untitled-2026-03-22T21-14-16-212Z.md  Untitled-2026-03-22T21-58-06-220Z.md  Untitled.md  adfsadf.md  dist_sys_lec_04.md  integrals.md  t.mde.mds.mdt.md
desktop/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
desktop/src/: App.tsx  api.ts  hybrid-editor.tsx  markdown.tsx  styles.css  types.ts  vite-env.d.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: main.rs
desktop/src/components/ui/: button.tsx  input.tsx  scroll-area.tsx  select.tsx
tests/: test_api.py  test_backend_api.py  test_provider_resolution.py
